Add required libs & plugins 🫸🌀✏️📗 :octocat: